Adroefke structure adjustment (#200)
* adjust structure from TestSuite and TestCase to Requirement and Scenario

* adjust validation for new structure and fix build

* change structure for adjust and expect and extend validation

* fix javadoc

* adjust grammar for function and attribute

* adjust grammar to mark attribute mocking via Expectation only

* remove Error Val from ValMatcher and allow only function and attribute to return it

* adjust logic for PIP and FunctionLibrary registration

* adjust Duration Validation to reject zero and negative values

* adjust logic to enable navigation to test source

* clean up code and fix sonar issues